--- a/src/components/asidesection/categorycomponent/component/options/modifycategory/styles/modifycategory.module.css
+++ b/src/components/asidesection/categorycomponent/component/options/modifycategory/styles/modifycategory.module.css
@@ -1,6 +1,13 @@
+.categoryoptioncontainer {
+    height: 100%;
+}
 .categorymodifybutton {
     background-color: rgb(181, 35, 35);
     color: white;
     border: none;
     padding: 0.4em;
+    display: flex;
+}
+.modifyicon {
+    margin-left: 0.4em;
 }
